Refactored FamilyTree and PersonCard CSS for improved layout and responsiveness, including overflow adjustments and margin resets.

--- a/src/components/PersonCard.css
+++ b/src/components/PersonCard.css
@@ -218,6 +218,8 @@
     padding: 10px 1vw;
     font-size: 0.98rem;
     box-sizing: border-box;
+    margin-left: 0;
+    margin-right: 0;
   }
   .person-image {
     width: 64px;
